[package]
name = "moon-t"
version = "0.0.0-alpha.1"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "[UNDER CONSTRUCTION / RESERVED NAME]"
readme = "README.md"
repository = "https://github.com/piotrbajdek/moon-t"
license = "MIT"

[profile.release]
codegen-units = 1
strip = true

[package.metadata.generate-rpm]
assets = [
{ source = "target/release/moon-t", dest = "/usr/bin/moon-t", mode = "755" }
]
